# StrayFriends

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
server/: .gitignore  Cargo.toml  a.http
server/sqls/: animal-delete.sql  animal-set-adopted.sql  change-password.sql  check-animal-post-owner.sql  check-square-post-owned.sql  count-adoption-requests.sql  count-animals.sql  count-square-posts.sql  delete-adoption-request.sql  delete-square-post.sql  file-adoption.sql  insert-image-id.sql  list-adoption-requests.sql  list-animals.sql  list-square-posts.sql  login-query.sql  post-animal.sql  post-square.sql  query-animal-post.sql  query-password-by-uid.sql  query-password.sql  query-user.sql  update-user-info.sql  user-signup.sql
server/src/: config.rs  db.rs  jwt.rs  lib.rs  main.rs
server/src/handlers/: account.rs  adoption.rs  animal.rs  authentication.rs  file.rs  mod.rs  square.rs  upload.rs
src/: App.vue  AppRoot.vue  RouterRoot.vue  api.ts  jwt.ts  main.ts  routes.ts
src/components/: AdoptionRequest.vue  AdoptionRequestListView.vue  AdoptionStatus.vue  AdoptionsAdmin.vue  AnimalCard.vue  AnimalDetails.vue  DateView.vue  Demo1.vue  Header.vue  Home.vue  HomeTitle.vue  ImageUpload.vue  Login.vue  MyInfo.vue  PasswordConfirm.vue  PostAnimal.vue  Signup.vue  SpinIndicator.vue  Square.vue  SquarePost.vue  TextBanner.vue  UserBox.vue  UserInfo.vue  UserProfile.vue
