[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.18", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
axum = { version = "0.7.6", features = ["query", "macros", "multipart"] }
axum-extra = { version = "0.9.4", features = ["cookie", "typed-header"] }
fern = "0.6.2"
log = "0.4.22"
humantime = "2.1.0"
anyhow = "1.0.89"
once_cell = "1.19.0"
paste = "1.0.15"
yeet-ops = "1.0.0"
figment = { version = "0.10.19", features = ["toml"] }
regex = "1.10.6"
jsonwebtoken = "9.3.0"
rand = "0.9.0-alpha.2"
digest = { version = "0.11.0-pre.9", features = ["std"] }
sha1 = { version = "0.11.0-pre.4", features = ["std"] }
blake3 = { version = "1.5.4", features = ["std"] }
hex = "0.4.3"
base64 = "0.22.1"
